--- a/CursoemVideo/mod_04/exerc/ex01/css/style.css
+++ b/CursoemVideo/mod_04/exerc/ex01/css/style.css
@@ -19,6 +19,11 @@ section{
     height: 250px; 
     border-radius:50%;
 }
+#img{
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+}
 div{
     text-align: center;
     padding: 10px;
