--- a/CursoemVideo/modelo/ex01/css/style.css
+++ b/CursoemVideo/modelo/ex01/css/style.css
@@ -14,7 +14,18 @@ section{
     margin:auto;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.336);
 }
+.foto img{
+    width:250px; 
+    height: 250px; 
+    border-radius:50%;
+}
+#img{
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+}
 div{
+    text-align: center;
     padding: 10px;
 }
 footer{
